UV Project - Specified UV Map doesnt work properly #36759

Closed
opened 2013-09-18 06:21:01 +02:00 by Carlo Andreacchio · 9 comments

%%%--- Operating System, Graphics card ---
Windows 7, x64, gtx 580

- Blender version with error, and version that worked ---

tested with r60058M with both cycles & blender render

- Short description of error ---

UV Project onto a specific UV Map doesnt work properly... It is based on which item is selected in the object properties

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open Attached blend file
  2. go into rendered mode (material setup is of attribute uv2, so it should display the uv coordinates of uv2)
  3. in mesh properties click on UVMap, then uv2
  4. notice how the colours are changing
  5. go into the modifier menu and notice that the uv map that should be effected by the uv project is uv2.. this should mean that whichever uv map you have selected shouldnt change the output of the attribute uv2...

%%%

%%%--- Operating System, Graphics card --- Windows 7, x64, gtx 580 - Blender version with error, and version that worked --- tested with r60058M with both cycles & blender render - Short description of error --- UV Project onto a specific UV Map doesnt work properly... It is based on which item is selected in the object properties - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open Attached blend file 2. go into rendered mode (material setup is of attribute uv2, so it should display the uv coordinates of uv2) 3. in mesh properties click on UVMap, then uv2 4. notice how the colours are changing 5. go into the modifier menu and notice that the uv map that should be effected by the uv project is uv2.. this should mean that whichever uv map you have selected shouldnt change the output of the attribute uv2... %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I cannot reproduce the bug with your file and the version you mention. (OSX, ATI here - so using CPU rendering)
In fact your (4) doesn't happen here unless I remove 'uv2' from the modifier, or disable the modifier. Are you using CPU or GPU for your tests?

You mentioned the internal render engine as well. Can you provide a file where I can see the error in the render internal too?%%%

%%%I cannot reproduce the bug with your file and the version you mention. (OSX, ATI here - so using CPU rendering) In fact your (4) doesn't happen here unless I remove 'uv2' from the modifier, or disable the modifier. Are you using CPU or GPU for your tests? You mentioned the internal render engine as well. Can you provide a file where I can see the error in the render internal too?%%%

%%%I can confirm the issue with 60205 on OS X, if you changing the active UV map will change the render, which it shouldn't.

It shouldn't matter if this is GPU render or blender internal, this looks like a modifier bug.%%%

%%%I can confirm the issue with 60205 on OS X, if you changing the active UV map will change the render, which it shouldn't. It shouldn't matter if this is GPU render or blender internal, this looks like a modifier bug.%%%

%%%I can confirm the issue with the file you uploaded too (both internal and cycles). However, I cannot redo it from scratch, so I would be inclined to think that your file is somehow corrupted.

We need a way to reproduce the issue starting from default scene to be able to investigate this, imho.%%%

%%%I can confirm the issue with the file you uploaded too (both internal and cycles). However, I cannot redo it from scratch, so I would be inclined to think that your file is somehow corrupted. We need a way to reproduce the issue starting from default scene to be able to investigate this, imho.%%%

%%%It's the MLOOP_UV and MTEXPOLY layer names that are out of sync. I'm not sure how that happens, but Campbell added a related fix a few days ago, maybe that should also fix up names.
https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=60158%%%

%%%It's the MLOOP_UV and MTEXPOLY layer names that are out of sync. I'm not sure how that happens, but Campbell added a related fix a few days ago, maybe that should also fix up names. https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=60158%%%

%%%Updating to the latest build bot still returns the same error.

These steps I took to replicate it fully in a new blend file

  1. delete everything in the scene
  2. add mesh plane
  3. scale plane to fit approx grid
  4. add camera and move / rotate to position
  5. on plane add two uv maps though mesh menu
  6. rename maps to uv1 and uv2, in that order leaving uv2 selected and uv1 with render visibility on
  7. split top view and bring up node editor up there
  8. through node editor add new material
  9. delete diffuse bsdf, add emission, and attirbute node, set attribute to uv2, vector output of attribute goes into emission
  10. go into modifier menu, add uv project modifier
  11. set camera to camera, uv map to uv2
  12. toggle rendered mode
  13. switch between selected uv maps in mesh menu
  14. try applying scale to see if that does anything and then realise it doesnt

I have tried this in BI aswell, but same problem.

%%%

%%%Updating to the latest build bot still returns the same error. These steps I took to replicate it fully in a new blend file 1) delete everything in the scene 2) add mesh plane 3) scale plane to fit approx grid 4) add camera and move / rotate to position 5) on plane add two uv maps though mesh menu 6) rename maps to uv1 and uv2, in that order leaving uv2 selected and uv1 with render visibility on 7) split top view and bring up node editor up there 8) through node editor add new material 9) delete diffuse bsdf, add emission, and attirbute node, set attribute to uv2, vector output of attribute goes into emission 10) go into modifier menu, add uv project modifier 11) set camera to camera, uv map to uv2 12) toggle rendered mode 13) switch between selected uv maps in mesh menu 14) try applying scale to see if that does anything and then realise it doesnt I have tried this in BI aswell, but same problem. %%%

%%%Here is an updated blend file which should work for both BI and Cycles... just toggle uvmap and uv2 as mentioned before.%%%

%%%Here is an updated blend file which should work for both BI and Cycles... just toggle uvmap and uv2 as mentioned before.%%%

%%%Fixed in r60260, thanks for the report. :)%%%

%%%Fixed in r60260, thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36759
No description provided.